add per api key stats
